# tsu-consult-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.py  pyproject.toml
.github/workflows/: main.yml  stop-bot.yml
data/: help_content.json
handlers/: dean.py  help.py  home.py  logout.py  profile.py  register.py  start.py  student.py  student_and_teacher.py  tasks_menu.py  teacher.py
keyboards/: help_keyboard.py  main.py  main_keyboard.py  paginated_keyboard.py
services/: auth.py  auth_api.py  consultations.py  dean_credentials.py  help_content.py  profile.py  tasks.py  teachers.py
services/api/: auth_api.py  profile_api.py
states/: auth.py  book_consultation.py  cancel_consultation.py  create_consultation.py  create_request.py  create_task.py  edit_profile.py  register_state.py  update_task.py
tests/: teachers.py
utils/: auth_utils.py  consultations_utils.py  messages.py  profile_utils.py
